settings: preserve agent-owned secrets on connection add

Settings plugins now return the connection that was reread from file
when adding a connection, which means that any agent-owned secret is
lost. Ensure that we don't forget agent-owned secrets by caching them
and readding them to the new connection returned by plugins.

Fixes: 8a1d483ca867aa02a155bab934b19d74abac902c
Fixes: b4594af55e0665917c48f0dd3cd56b49f2ea1f78

https://bugzilla.gnome.org/show_bug.cgi?id=789383
(cherry picked from commit 62141d59cb3f41081ecc2af1f716f78c3d2a89b5)
(cherry picked from commit 0bd8b347258b05aee148a9337cab217fdb78ba03)